kubernetes-files/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/shopping-cart: "true"
        io.kompose.service: backend
    spec:
      containers:
      - env:
        - name: MONGO_URI
          value: '''mongodb://mongo:27017/shopping-cart'''
        image: asia.gcr.io/mern-shopping-cart/backend
        imagePullPolicy: ""
        name: backend
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
