kubernetes-files/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/shopping-cart: "true"
        io.kompose.service: frontend
    spec:
      containers:
      - image: asia.gcr.io/mern-shopping-cart/frontend
        imagePullPolicy: ""
        name: frontend
        ports:
        - containerPort: 3000
        resources: {}
        stdin: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
